Fix footer line spacing

--- a/source/stylesheets/partials/footer.styl
+++ b/source/stylesheets/partials/footer.styl
@@ -3,6 +3,10 @@ footer
   color #fff
   position relative
   z-index 2
+  p, ul, ol
+    line-height em(29)
+  li + li
+    margin-top 0.6em
   a
     color $accent
     text-decoration underline
